force-app/main/default/objects/Work_Order_Ledger_Entry__c/Work_Order_Ledger_Entry__c.object-meta.xml
<CustomObject>
    <description>Material accounting event on a Work Order Ledger.</description>
    <label>Work Order Ledger Entry</label>
    <nameField>
        <displayFormat>WOLE-{00000}</displayFormat>
        <label>Ledger Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Ledger Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>