force-app/main/default/objects/Work_Order_Ledger_Entry__c/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Ledger Entries Changed</relationshipLabel>
    <relationshipName>Ledger_Entries_Changed_By</relationshipName>
    <type>Lookup</type>
</CustomField>