force-app/main/default/objects/Work_Order_Ledger_Entry__c/fields/Event_Key__c.field-meta.xml
<CustomField>
    <fullName>Event_Key__c</fullName>
    <label>Event Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>