force-app/main/default/objects/Work_Order_Ledger_Entry__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>WORK_ORDER_CREATED</fullName>
        </value>
        <value>
            <fullName>WORK_ORDER_STATUS_CHANGED</fullName>
        </value>
        <value>
            <fullName>SERVICE_APPOINTMENT_CREATED</fullName>
        </value>
        <value>
            <fullName>SERVICE_APPOINTMENT_SCHEDULED</fullName>
        </value>
        <value>
            <fullName>SERVICE_APPOINTMENT_COMPLETED</fullName>
        </value>
        <value>
            <fullName>SERVICE_APPOINTMENT_CANCELLED</fullName>
        </value>
        <value>
            <fullName>SERVICE_APPOINTMENT_MOVED</fullName>
        </value>
        <value>
            <fullName>OPPORTUNITY_LINKED</fullName>
        </value>
        <value>
            <fullName>OPPORTUNITY_UNLINKED</fullName>
        </value>
        <value>
            <fullName>DEPOSIT_RECORDED</fullName>
        </value>
        <value>
            <fullName>DEPOSIT_CHANGED</fullName>
        </value>
        <value>
            <fullName>DEPOSIT_STATUS</fullName>
        </value>
        <value>
            <fullName>PARTS_STATUS</fullName>
        </value>
        <value>
            <fullName>INVOICE_NUMBER_CHANGED</fullName>
        </value>
        <value>
            <fullName>BILLING_HOLD</fullName>
        </value>
        <value>
            <fullName>ACCOUNTING_NOTE</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>