force-app/main/default/objects/Work_Order_Ledger_Entry__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <label>Source Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>WorkOrder</fullName>
        </value>
        <value>
            <fullName>ServiceAppointment</fullName>
        </value>
        <value>
            <fullName>Opportunity_WorkOrder</fullName>
        </value>
        <value>
            <fullName>Invoice</fullName>
        </value>
        <value>
            <fullName>Manual</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>