force-app/main/default/objects/Work_Order_Ledger_Entry__c/fields/Work_Order_Ledger__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Ledger__c</fullName>
    <label>Work Order Ledger</label>
    <referenceTo>Work_Order_Ledger__c</referenceTo>
    <relationshipLabel>Ledger Entries</relationshipLabel>
    <relationshipName>Ledger_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>